--- a/src/app/components/manager-override/manager-override.component.html
+++ b/src/app/components/manager-override/manager-override.component.html
@@ -1,15 +1,17 @@
-<div *ngIf="(showOverride$ | async)">
-  <h3 mat-dialog-title>Manager Override</h3>
-  <mat-dialog-content>
-    <p>Action <strong>{{ action.type }}</strong> requires manager permissions</p>
-    <form>
-      <mat-form-field>
-        <input matInput placeholder="Password">
-      </mat-form-field>
-    </form>
-  </mat-dialog-content>
-  <mat-dialog-actions>
-    <button mat-raised-button color="primary" (click)="submitOverride()">Submit</button>
-    <button mat-raised-button color="warn" (click)="cancelOverride()">Cancel</button>
-  </mat-dialog-actions>
+<div class="popup" *ngIf="(showOverride$ | async)">
+  <div class="popup-content">
+    <h3 mat-dialog-title>Manager Override</h3>
+    <mat-dialog-content>
+      <p>Action <strong>{{ action.type }}</strong> requires manager permissions</p>
+      <form>
+        <mat-form-field>
+          <input matInput placeholder="Password" type="password">
+        </mat-form-field>
+      </form>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+      <button mat-raised-button color="primary" (click)="submitOverride()">Submit</button>
+      <button mat-raised-button color="warn" (click)="cancelOverride()">Cancel</button>
+    </mat-dialog-actions>
+  </div>
 </div>
