--- a/src/app/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/components/confirmation-dialog/confirmation-dialog.component.html
@@ -3,6 +3,6 @@
   Action <strong>{{ data.action.type }}</strong> requires manager approval. Continue?
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-raised-button color="warn" mat-dialog-close>No</button>
+  <button mat-button mat-raised-button color="warn" mat-dialog-close (click)="onNoClick()">No</button>
   <button mat-button mat-raised-button color="primary" [mat-dialog-close]="true" (click)="onYesClick()">Yes</button>
 </mat-dialog-actions>
