--- a/src/app/components/manager-override-dialog/manager-override-dialog.component.html
+++ b/src/app/components/manager-override-dialog/manager-override-dialog.component.html
@@ -6,6 +6,6 @@
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
+  <button mat-raised-button color="warn" mat-dialog-close (click)="onCancel()">Cancel</button>
   <button mat-raised-button color="primary" (click)="onAuthorize()">Confirm</button>
 </mat-dialog-actions>
