--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   <span class="spacer"></span>
   <button mat-button routerLink="/admin">Admin</button>
 </mat-toolbar>
-
+<div class="top-spacer"></div>
 <router-outlet></router-outlet>
