--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,18 +1,16 @@
-<div class="content">
-  <mat-card class="example-card" *ngFor="let product of (products$ | async)">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{ product.title }}</mat-card-title>
-      <mat-card-subtitle>{{ product.subtitle }}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image [src]="product.imageUrl" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p>{{ product.description }}</p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary">ADD TO CART {{ product.price }}$</button>
-    </mat-card-actions>
-  </mat-card>
-</div>
-
-<button mat-raised-button color="primary" class="fixed-bottom">TOTAL</button>
+<mat-card class="example-card" *ngFor="let product of (products$ | async)">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>{{ product.title }}</mat-card-title>
+    <mat-card-subtitle>{{ product.subtitle }}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image [src]="product.imageUrl" alt="Photo of a Shiba Inu">
+  <mat-card-content>
+    <p>{{ product.description }}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button color="primary" (click)="addItem(product)">ADD {{ product.price }}$</button>
+  </mat-card-actions>
+</mat-card>
+<div class="bottom-spacer"></div>
+<button mat-raised-button color="primary" class="fixed-bottom">TOTAL {{ total }}$</button>
